# aafactory-servers

./: .gitignore  README.md  cloudbuild.yaml
infinite_talk/: README.md  celery_worker.py  cloudbuild.yaml  dockerfile  entrypoint.sh  infinite_talk_test_request.json  pyproject.toml  single_example_image.json
infinite_talk/infinite_talk/InfiniteTalk/: generate_infinitetalk.py
infinite_talk/infinite_talk/InfiniteTalk/kokoro/: istftnet.py
infinite_talk/infinite_talk/InfiniteTalk/src/audio_analysis/: wav2vec2.py
infinite_talk/infinite_talk/InfiniteTalk/src/vram_management/: layers.py
infinite_talk/infinite_talk/InfiniteTalk/wan/: multitalk.py
infinite_talk/infinite_talk/processing/: compute_audio_to_video.py  config.py
kandinsky_5/: README.md  celery_worker.py  cloudbuild.yaml  dockerfile  entrypoint.sh  install_sage_attention.sh  kandinsky_test_request.json  pyproject.toml
kandinsky_5/processing/: compute_text_to_video.py
qwen_image/: README.md  celery_worker.py  cloudbuild.yaml  dockerfile  entrypoint.sh  pyproject.toml  qwen_image_to_image_test_request.json  qwen_text_to_image_test_request.json
qwen_image/processing/: generate_image.py
wan-animate/: cloudbuild.yaml  cloudbuild_instructions.md  entrypoint.sh
wan_2_2_animate/: .dockerignore  celery_worker.py  dockerfile  entrypoint.sh  pyproject.toml
wan_2_2_animate/comfyui_logic/: workflow.py
wan_animate/: .dockerignore  README.md  celery_worker.py  cloudbuild.yaml  dockerfile  download_models.sh  entrypoint.sh  init_comfyui.sh  install_sage_attention.sh  pyproject.toml
wan_animate/comfyui_logic/: save_as_script_notes.md  workflow.py
wan_animate/wan_animate/: additional_custom_nodes.py  arg_builder.py  arg_config.py  arg_utils.py  save_as_script_notes.md  worker_utils.py  workflow.json  workflow.py
wan_animate/wan_animate/cli_arguments/: builder.py  config_animate.py  config_replace.py
wan_animate/wan_animate/workflows/: workflow_replace.json  workflow_replace.py
zonos/: README.md  celery_worker.py  cloudbuild.yaml  dockerfile  entrypoint.sh  pyproject.toml  zonos_test_request.json
zonos/processing/: compute_tts.py
