[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.10.1",
    "celery>=5.5.3",
    "dashscope>=1.24.4",
    "decord>=0.6.0",
    "diffusers>=0.35.1",
    "easydict>=1.13",
    "fastapi>=0.116.1",
    "ftfy>=6.3.1",
    "hf-transfer>=0.1.9",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "misaki[en]>=0.9.4",
    "moviepy==1.0.3",
    "ninja>=1.13.0",
    "numpy>=1.23.5",
    "opencv-python>=4.9.0.80",
    "optimum-quanto==0.2.6",
    "packaging>=25.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyloudnorm>=0.1.1",
    "redis>=6.4.0",
    "scenedetect>=0.6.7",
    "scikit-image>=0.25.2",
    "soundfile>=0.13.1",
    "tokenizers>=0.22.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "wheel>=0.45.1",
    "xformers==0.0.28",
    "xfuser>=0.4.1",
]

[tool.setuptools]
packages = ["infinite_talk"]
