[project]
name = "qwen-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "celery>=5.5.3",
    "diffusers>=0.35.1",
    "pip>=25.2",
    "redis>=6.4.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "cupy-cuda12x",
    "dfloat11",
]
