[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "celery>=5.5.3",
    "redis>=6.4.0",
    "huggingface-hub==0.35.3",
    "diffusers>=0.31.0",
    "transformers>=4.49.0,<=4.51.3",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "opencv-python>=4.9.0.80",
    "numpy>=1.23.5,<2",
    "torch==2.6.0",
    "torchvision",
    "torchaudio==2.6.0",
    "easydict",
    "ftfy",
    "einops",
    "decord",
    "librosa",
    "imageio",
    "imageio-ffmpeg",
    "peft",
    "loguru",
    "moviepy",
    "tqdm",
    "dashscope",
    "onnxruntime-gpu==1.23.0",
    "pandas",
    "matplotlib",
    "sentencepiece",
    "openai-whisper",
    "HyperPyYAML",
    "inflect",
    "wetext",
    "omegaconf",
    "conformer",
    "hydra-core",
    "lightning",
    "rich",
    "gdown",
    "wget",
    "pyarrow",
    "pyworld",
    "modelscope",
    "GitPython",
]

[tool.setuptools]
packages = ["wan_2_2_animate"]