[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "comfyui-frontend-package==1.28.7",
    "comfyui-workflow-templates==0.1.95",
    "comfyui-embedded-docs==0.3.0",
    "torchsde==0.2.6",
    "numpy==2.2.6",
    "einops==0.8.1",
    "transformers==4.57.1",
    "tokenizers==0.22.1",
    "sentencepiece==0.2.1",
    "safetensors==0.6.2",
    "aiohttp==3.13.1",
    "yarl==1.22.0",
    "pyyaml==6.0.3",
    "Pillow==12.0.0",
    "scipy==1.15.3",
    "tqdm==4.67.1",
    "psutil==7.1.0",
    "alembic==1.17.0",
    "SQLAlchemy==2.0.44",
    "av==16.0.1",
    "kornia==0.8.1",
    "spandrel==0.4.1",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "importlib_metadata==8.7.0",
    "huggingface_hub==0.35.3",
    "opencv-python==4.12.0.88",
    "filelock==3.20.0",
    "scikit-image==0.25.2",
    "python-dateutil==2.9.0.post0",
    "mediapipe==0.10.14",
    "fvcore==0.1.5.post20221221",
    "yapf==0.43.0",
    "omegaconf==2.3.0",
    "ftfy==6.3.1",
    "addict==2.4.0",
    "yacs==0.1.8",
    "trimesh[easy]==4.8.3",
    "albumentations==2.0.8",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.7",
    "diffusers==0.35.2",
    "accelerate==1.10.1",
    "clip-interrogator==0.6.0",
    "lark==1.3.0",
    "onnxruntime==1.23.2",
    "onnxruntime-gpu==1.23.2",
    "peft==0.17.1",
    "opencv-contrib-python==4.12.0.88",
    "color-matcher==0.6.0",
    "mss==10.1.0",
    "pyOpenSSL==25.3.0",
    "watchdog==6.0.0",
    "opencv-python-headless==4.12.0.88",
    "openai==1.109.1",
    "lark-parser==0.12.0",
    "imageio-ffmpeg==0.6.0",
    "rembg[gpu]==2.0.67",
    "soundfile==0.13.1",
    "json-repair==0.52.1",
    "bitsandbytes==0.48.1",
    "scenedetect[opencv-headless]==0.6.7.1",
    "hydra-core==1.3.2",
    "loralib==0.1.2",
    "natsort==8.4.0",
    "faster_whisper==1.2.0",
    "swarm @ git+https://github.com/openai/swarm.git@0c82d7d868bb8e2d380dfd2a319b5c3a1f4c0cb9",
    "surrealist==1.1.2",
    "boto3==1.34.86",
    "redis==6.4.0",
    "fal-client==0.8.1",
    "replicate==1.0.7",
    "protobuf==4.25.8",
    "pyloudnorm==0.1.1",
    "gguf==0.17.1",
    "sensevoice-onnx @ git+https://github.com/shadowcz007/SenseVoice-python.git@43f6cf1531e7e4a7d7507d37fbc9b0fb169166ab",
    "svglib==1.6.0",
    "celery>=5.5.3",
    "redis>=6.4.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
]

extra-index-url = [
    "https://download.pytorch.org/whl/cu128",
]

[tool.setuptools]
packages = ["wan_2_2_animate"]